feat: remove expiresAt from credential metadata
The expiration record against the credential metadata is not the
credential expiration and is instead the expiration of the token
provided with the credential data.
The real expiration date is not currently available, so the expiresAt
field should be removed to avoid confusion.

TIS21-5263